<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.4.4</version>
    <relativePath/>
    <!-- lookup parent from repository -->
  </parent>

  <groupId>com.activeviam.apps</groupId>
  <artifactId>atoti-spring-boot-template</artifactId>
  <version>6.1.7</version>
  <description>Template project for Spring Boot</description>

  <properties>
    <java.version>21</java.version>
    <spring-boot.version>3.4.4</spring-boot.version>
    <atoti-server.version>6.1.10</atoti-server.version>
    <springdoc.version>2.8.6</springdoc.version>
    <dlc.version>5.0.7</dlc.version>
    <antlr4.version>4.13.2</antlr4.version>

    <opentelemetry.version>1.48.0</opentelemetry.version>
    <opentelemetry-instrumentation.version>2.14.0</opentelemetry-instrumentation.version>
    <opentelemetry-logback-mdc.version>2.14.0-alpha</opentelemetry-logback-mdc.version>

    <spotless-maven-plugin.version>2.44.4</spotless-maven-plugin.version>
    <palantir-java-format.version>2.63.0</palantir-java-format.version>

    <grammar.package>com.activeviam.apps.query.grammar</grammar.package>
    <grammar.directory>com/activeviam/apps/query/grammar</grammar.directory>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.opentelemetry.instrumentation</groupId>
        <artifactId>opentelemetry-instrumentation-bom</artifactId>
        <version>${opentelemetry-instrumentation.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <!-- Spring Boot -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-text</artifactId>
      <version>1.14.0</version>
    </dependency>

    <!-- Direct query -->
    <dependency>
      <groupId>com.activeviam.activepivot</groupId>
      <artifactId>activepivot-external-database</artifactId>
      <version>${atoti-server.version}</version>
    </dependency>
    <dependency>
      <groupId>com.activeviam.directquery</groupId>
      <artifactId>api-application</artifactId>
      <version>${atoti-server.version}</version>
    </dependency>
    <dependency>
      <groupId>com.activeviam.directquery</groupId>
      <artifactId>api-generic-jdbc</artifactId>
      <version>${atoti-server.version}</version>
    </dependency>
    <dependency>
      <groupId>com.activeviam.database.jdbc.dialect.dremio</groupId>
      <artifactId>dremio-dialect</artifactId>
      <version>${atoti-server.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.arrow/flight-sql-jdbc-driver -->
    <dependency>
      <groupId>org.apache.arrow</groupId>
      <artifactId>flight-sql-jdbc-driver</artifactId>
      <version>16.1.0</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.jgroups.kubernetes/jgroups-kubernetes -->
    <dependency>
      <groupId>org.jgroups.kubernetes</groupId>
      <artifactId>jgroups-kubernetes</artifactId>
      <version>2.0.2.Final</version>
    </dependency>

    <dependency>
      <groupId>com.activeviam.io</groupId>
      <artifactId>data-load-controller</artifactId>
      <version>${dlc.version}</version>
    </dependency>
    <!-- ActivePivot Core JDBC Dependency -->
    <dependency>
      <groupId>com.activeviam.source</groupId>
      <artifactId>jdbc-source</artifactId>
      <version>${atoti-server.version}</version>
    </dependency>

    <!-- OpenTelemetry -->
    <dependency>
      <groupId>io.opentelemetry.instrumentation</groupId>
      <artifactId>opentelemetry-spring-boot-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>io.opentelemetry.instrumentation</groupId>
      <artifactId>opentelemetry-logback-mdc-1.0</artifactId>
      <version>${opentelemetry-logback-mdc.version}</version>
    </dependency>

    <!-- ActiveViam Starters -->
    <dependency>
      <groupId>com.activeviam.springboot</groupId>
      <artifactId>excel-addin-starter</artifactId>
      <version>${atoti-server.version}</version>
    </dependency>
    <dependency>
      <groupId>com.activeviam.springboot</groupId>
      <artifactId>atoti-server-apm-starter</artifactId>
      <version>${atoti-server.version}</version>
    </dependency>
    <dependency>
      <groupId>com.activeviam.springboot</groupId>
      <artifactId>atoti-server-starter</artifactId>
      <version>${atoti-server.version}</version>
    </dependency>
    <dependency>
      <groupId>com.activeviam.springboot</groupId>
      <artifactId>atoti-ui-starter</artifactId>
      <version>${atoti-server.version}</version>
    </dependency>
    <dependency>
      <groupId>com.activeviam.springboot</groupId>
      <artifactId>atoti-admin-ui-starter</artifactId>
      <version>${atoti-server.version}</version>
    </dependency>

    <!-- Content Server persistence -->
    <dependency>
      <groupId>org.hibernate.orm</groupId>
      <artifactId>hibernate-hikaricp</artifactId>
    </dependency>

    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
    </dependency>

    <!-- Lombok -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
    </dependency>

    <!-- Swagger -->
    <dependency>
      <groupId>org.springdoc</groupId>
      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
      <version>${springdoc.version}</version>
    </dependency>

    <dependency>
      <groupId>org.antlr</groupId>
      <artifactId>antlr4-runtime</artifactId>
      <version>${antlr4.version}</version>
    </dependency>

    <dependency>
      <groupId>io.micrometer</groupId>
      <artifactId>micrometer-registry-prometheus</artifactId>
    </dependency>

    <!-- Test dependencies -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-test</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.activeviam</groupId>
      <artifactId>atoti-server-test</artifactId>
      <version>${atoti-server.version}</version>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <build>
    <finalName>atoti-spring-boot-template</finalName>
    <plugins>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>${spotless-maven-plugin.version}</version>
        <configuration>
          <!-- limit format enforcement to just the files changed by this feature branch -->
          <ratchetFrom>origin/6.1</ratchetFrom>
          <!-- define a language-specific format -->
          <java>
            <palantirJavaFormat>
              <version>${palantir-java-format.version}</version>
            </palantirJavaFormat>

            <importOrder>
              <!-- or a custom ordering -->
              <order>\\#,java,javax,org,com,com.diffplug,</order>
              <!-- or use <file>${project.basedir}/eclipse.importorder</file> -->
              <!-- you can use an empty string for all the imports you didn't specify explicitly, and '\\#` prefix for static imports. -->
            </importOrder>

            <removeUnusedImports/>
            <licenseHeader>
              <file>./.idea/copyright/spotless.license</file>
            </licenseHeader>
          </java>
          <pom>
            <!-- These are the defaults, you can override if you want -->
            <includes>
              <include>**/pom.xml</include>
            </includes>
            <sortPom>
              <!-- has its own section below -->
              <expandEmptyElements>false</expandEmptyElements>
            </sortPom>
          </pom>
          <markdown>
            <includes>
              <!-- You have to set the target manually -->
              <include>**/*.md</include>
            </includes>
            <flexmark/>
            <!-- has its own section below -->
          </markdown>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
            <path>
              <groupId>org.springframework.boot</groupId>
              <artifactId>spring-boot-configuration-processor</artifactId>
              <version>${spring-boot.version}</version>
            </path>
          </annotationProcessorPaths>
          <!-- https://github.com/spring-projects/spring-framework/wiki/Upgrading-to-Spring-Framework-6.x#parameter-name-retention -->
          <parameters>true</parameters>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>--add-opens java.base/java.util.concurrent=ALL-UNNAMED
            --add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED
            -Dactiveviam.chunkAllocatorKey=mmap</argLine>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.antlr</groupId>
        <artifactId>antlr4-maven-plugin</artifactId>
        <version>${antlr4.version}</version>
        <configuration>
          <listener>true</listener>
          <visitor>true</visitor>
          <arguments>
            <argument>-package</argument>
            <argument>${grammar.package}</argument>
          </arguments>
          <outputDirectory>${project.build.directory}/generated-sources/${grammar.directory}</outputDirectory>
        </configuration>
        <executions>
          <execution>
            <id>antlr</id>
            <goals>
              <goal>antlr4</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
